--- a/functions/package.json
+++ b/functions/package.json
@@ -33,10 +33,11 @@
     "uuid": "^3.3.3"
   },
   "devDependencies": {
+    "@phenomnomnominal/tsquery": "^4.0.0",
     "@types/lodash": "^4.14.149",
     "firebase-functions-test": "^0.1.6",
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.7.4"
   },
   "private": true
 }
